--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
 
             <div style="text-align: center; margin-top: 137px">
                 Kesulitan mengakses akun DonateKUY?<br>
-                <a href="#" style="text-decoration: none;">Segera email kami di help@donatekuy.com</a>
+                <a href="#" style="text-decoration: none;">Segera email kami di donate.kuy@gmail.com</a>
             </div>
         </main>
     </body>
