--- a/profile-donatur.html
+++ b/profile-donatur.html
@@ -84,6 +84,26 @@
                 <div class="blue-separator-line"></div>
             </div>
 
+            <div class="profile-submenu">
+                <div class="menus">
+                    <div class="submenu">
+                        <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
+                    </div>
+                    <hr>
+                    <div class="submenu">
+                        <img src="Assets/ic-history.png"><span>Donation History</span>
+                    </div>
+                    <hr>
+                    <div class="submenu">
+                        <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
+                    </div>
+                    <hr>
+                    <div class="submenu">
+                        <img src="Assets/ic-password.png"><span>Password & Security</span>
+                    </div>
+                    <hr>
+                </div>
+            </div>
         </main>
     </body>
 </html>
