--- a/home-donatur.html
+++ b/home-donatur.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="home-style.css">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
@@ -99,10 +100,48 @@
             </div>
 
             <div class="content">
-                <div style="height: 3000px !important; color: black;">
-                    <p>
-                        https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js
-                    </p>
+                <div class="content-wrapper">
+                    <div class="charity">
+                        <div class="title">
+                            <h2>Charity</h2>
+                            <div class="view-more">
+                                <h3>View More</h3>
+                                <img src="Assets/ic-arrow.png">
+                            </div>
+                        </div>
+                        <div class="charity-items">
+                            <div class="charity-item">
+                                <div class="paragraph">
+                                    <h2>Korban Banjir Kota Cirebon</h2>
+                                    <p>Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan
+                                        . . .</p>
+                                    <div class="charity-target">
+                                        <h3>Rp450.000.000</h3>
+                                        <p>Target : Rp 600.000.000</p>
+                                    </div>
+                                    
+                                    <progress id="file" value="70" max="100"></progress>
+                                </div>
+                                <div class="image">
+                                    <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                    
+                                    <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <br><br><br>
+
+                    <div class="streaming">
+                        <div class="title">
+                            <h2>Streaming</h2>
+                            <div class="view-more">
+                                <h3>View More</h3>
+                                <img src="Assets/ic-arrow.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
