--- a/home-penggalang-dana.html
+++ b/home-penggalang-dana.html
@@ -7,20 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="home-penggalang-style.css">
+    <link rel="stylesheet" href="home-style.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <script src="JS/header.js"></script>
 
     <title>DonateKUY</title>
 </head>
@@ -108,92 +103,84 @@
         </div>
 
         <div class="content">
-            <div>
-                <p class="content-text-1">Donasi yang pernah dibuat</p>
-            </div>
-            <div class="row">
-                <div class="col offset-7">
-                    <p class="content-text-2 d-inline">Filter: </p>
-                    <div class="d-inline box-filter p-1 ps-2">
-                        <p class="d-inline text-width ">Charity</p>
-                        <img src="Assets/eva_arrow.png" alt="arrow">
-                    </div>
-                </div>
-                <div class="col">
-                    <p class="content-text-2 d-inline">Sort: </p>
-                    <div class="d-inline box-filter p-1 ps-2">
-                        <p class="d-inline text-width ">Newly</p>
-                        <img src="Assets/eva_arrow.png" alt="arrow">
-                    </div>
-                </div>
-            </div>
-            <div class="row box-filter1 mt-4 p-3">
-                <div class="col">
-                    <div class="row">
-                        <div class="col-7" style="width: 48%;">
-                            <p class="judul-bencana">Korban Banjir Kota Ciberon</p>
-                            <p>Donasi yang akan diberikan berupa paket sembako,
-                                kebutuhan ibu anak, kebutuhan harian dan kesehatan
-                            </p>
-                            <p>...</p>
-                            <div class="row">
-                                <div class="col">
-                                    <p class="harga">Rp450.000.000</p>
-                                </div>
-                                <div class="col-9">
-                                    <p class="target">Target: Rp 600.000.000</p>
+            <div class="content-wrapper">
+                <div class="charity">
+                    <div class="title">
+                        <h2>Donasi yang pernah dibuat</h2>
+                        <div class="filter">
+                            <div style="margin-right: 20px;">
+                                <p class="content-text-2 d-inline">Filter: </p>
+                                <div class="d-inline box-filter p-1 ps-2">
+                                    <p class="d-inline text-width ">Charity</p>
+                                    <img src="Assets/eva_arrow.png" alt="arrow">
                                 </div>
                             </div>
-                            <img src="Assets/Group 33.png" alt="bar" class="d-block">
-                            <div class="row mt-2">
-                                <div class="col">
-                                    <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
-                                    <p class="d-inline size">Status masih berjalan</p>
-                                </div>
-                                <div class="col-8 day">
-                                    <p><b>12</b> Hari lagi</p>
+                            <div>
+                                <p class="content-text-2 d-inline">Sort: </p>
+                                <div class="d-inline box-filter p-1 ps-2">
+                                    <p class="d-inline text-width ">Newly</p>
+                                    <img src="Assets/eva_arrow.png" alt="arrow">
                                 </div>
                             </div>
                         </div>
-                        <div class="col vertical-center">
-                            <img src="Assets/banjir 1.png" alt="picture" class="d-inline" style="width: 440px;">
-                            <img src="Assets/Arrow.png" alt="arrow" class="d-inline">
-                        </div>
                     </div>
-                </div>
-            </div>
+                    <div class="charity-items">
+                        <div class="charity-item">
+                            <div class="paragraph">
+                                <h2>Korban Banjir Kota Cirebon</h2>
+                                <p>Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan
+                                    . . .</p>
+                                    <br>
+                                <div class="charity-target">
+                                    <h3>Rp450.000.000</h3>
+                                    <p>Target : Rp 600.000.000</p>
+                                </div>
+                                <progress id="file" value="70" max="100"></progress>
+                                <div class="status">
+                                    <div>
+                                        <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
+                                        Status: masih berjalan
+                                    </div>
+                                    <div class="time">
+                                        <span><strong>12</strong> hari lagi</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                
+                                <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
+                            </div>
+                        </div>
 
-            <div class="row box-filter1 mt-4 p-3">
-                <div class="col">
-                    <div class="row">
-                        <div class="col-7" style="width: 48%;">
-                            <p class="judul-bencana">Korban Banjir Kota Ciberon</p>
-                            <p>Donasi yang akan diberikan berupa paket sembako,
-                                kebutuhan ibu anak, kebutuhan harian dan kesehatan
-                            </p>
-                            <p>...</p>
-                            <div class="row">
-                                <div class="col">
-                                    <p class="harga">Rp450.000.000</p>
+                        <br>
+
+                        <div class="charity-item">
+                            <div class="paragraph">
+                                <h2>Korban Banjir Kota Jakarta</h2>
+                                <p>Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan
+                                    . . .</p>
+                                    <br>
+                                <div class="charity-target">
+                                    <h3>Rp1.450.000.000</h3>
+                                    <p>Target : Rp 1.800.000.000</p>
                                 </div>
-                                <div class="col-9">
-                                    <p class="target">Target: Rp 600.000.000</p>
-                                </div>
-                            </div>
-                            <img src="Assets/Group 33.png" alt="bar" class="d-block">
-                            <div class="row mt-2">
-                                <div class="col">
-                                    <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
-                                    <p class="d-inline size">Status masih berjalan</p>
-                                </div>
-                                <div class="col-8 day">
-                                    <p><b>12</b> Hari lagi</p>
+                                <progress id="file" value="70" max="100"></progress>
+                                <div class="status">
+                                    <div>
+                                        <img src="Assets/Ellipse 3.png" alt="status" class="d-inline">
+                                        Status: selesai
+                                    </div>
+                                    <div class="time">
+                                        <span><strong>0</strong> hari lagi</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col vertical-center">
-                            <img src="Assets/banjir 1.png" alt="picture" class="d-inline" style="width: 440px;">
-                            <img src="Assets/Arrow.png" alt="arrow" class="d-inline">
+                            <div class="image">
+                                <img class="thumbnail" src="Assets/img-banjir-2.png">
+                                
+                                <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
+                            </div>
                         </div>
                     </div>
                 </div>
