feat: charity list page

--- a/streams.html
+++ b/streams.html
@@ -106,15 +106,8 @@
             <div class="content-wrapper">
                 <div class="charity">
                     <div class="title">
-                        <h2>Donasi yang pernah dibuat</h2>
+                        <h2>Streaming</h2>
                         <div class="filter">
-                            <div style="margin-right: 20px;">
-                                <p class="content-text-2 d-inline">Filter: </p>
-                                <div class="d-inline box-filter p-1 ps-2">
-                                    <p class="d-inline text-width ">Charity</p>
-                                    <img src="Assets/eva_arrow.png" alt="arrow">
-                                </div>
-                            </div>
                             <div>
                                 <p class="content-text-2 d-inline">Sort: </p>
                                 <div class="d-inline box-filter p-1 ps-2">
