--- a/charities.html
+++ b/charities.html
@@ -106,15 +106,8 @@
             <div class="content-wrapper">
                 <div class="charity">
                     <div class="title">
-                        <h2>Donasi yang pernah dibuat</h2>
+                        <h2>Charity</h2>
                         <div class="filter">
-                            <div style="margin-right: 20px;">
-                                <p class="content-text-2 d-inline">Filter: </p>
-                                <div class="d-inline box-filter p-1 ps-2">
-                                    <p class="d-inline text-width ">Charity</p>
-                                    <img src="Assets/eva_arrow.png" alt="arrow">
-                                </div>
-                            </div>
                             <div>
                                 <p class="content-text-2 d-inline">Sort: </p>
                                 <div class="d-inline box-filter p-1 ps-2">
@@ -182,6 +175,37 @@
                                 <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
                             </div>
                         </div>
+
+                        <br>
+
+                        <div class="charity-item">
+                            <div class="paragraph">
+                                <h2>Korban Banjir Kota Bogor</h2>
+                                <p>Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan
+                                    . . .</p>
+                                    <br>
+                                <div class="charity-target">
+                                    <h3>Rp220.000.000</h3>
+                                    <p>Target : Rp 180.000.000</p>
+                                </div>
+                                <progress id="file" value="100" max="100"></progress>
+                                <div class="status">
+                                    <div>
+                                        <img src="Assets/Ellipse 3.png" alt="status" class="d-inline">
+                                        Status: selesai
+                                    </div>
+                                    <div class="time">
+                                        <span><strong>0</strong> hari lagi</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img class="thumbnail" src="Assets/banjir3.png">
+                                
+                                <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
