feat: stream list page

--- a/streams.html
+++ b/streams.html
@@ -120,13 +120,12 @@
                     <div class="charity-items">
                         <div class="charity-item">
                             <div class="paragraph">
-                                <h2>Korban Banjir Kota Cirebon</h2>
-                                <p>Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan
+                                <h2>PETUALANGAN CJ & SAIPUL</h2>
+                                <p>Streaming ini dilakukan untuk menghibur pendonasi, dan yang paling utama adalah untuk mengumpulkan
                                     . . .</p>
-                                    <br>
                                 <div class="charity-target">
-                                    <h3>Rp450.000.000</h3>
-                                    <p>Target : Rp 600.000.000</p>
+                                    <h3>Rp68.000.000</h3>
+                                    <p>Target : Rp 210.000.000  </p>
                                 </div>
                                 <progress id="file" value="70" max="100"></progress>
                                 <div class="status">
@@ -135,12 +134,12 @@
                                         Status: masih berjalan
                                     </div>
                                     <div class="time">
-                                        <span><strong>12</strong> hari lagi</span>
+                                        <span><strong>11</strong> hari lagi</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="image">
-                                <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                <img class="thumbnail" src="Assets/stream1.png">
                                 
                                 <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
                             </div>
@@ -150,27 +149,26 @@
 
                         <div class="charity-item">
                             <div class="paragraph">
-                                <h2>Korban Banjir Kota Jakarta</h2>
-                                <p>Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan
-                                    . . .</p>
+                                <h2>1 Vs 1 Catur Online : Donation</h2>
+                                <p>Streaming ini untuk bersama-sama mengumpulkan dana untuk negara Palestina yang bersama-sama kita . . .</p>
                                     <br>
                                 <div class="charity-target">
-                                    <h3>Rp1.450.000.000</h3>
-                                    <p>Target : Rp 1.800.000.000</p>
+                                    <h3>Rp123.000.000</h3>
+                                    <p>Target : Rp150.000.000</p>
                                 </div>
                                 <progress id="file" value="70" max="100"></progress>
                                 <div class="status">
                                     <div>
-                                        <img src="Assets/Ellipse 3.png" alt="status" class="d-inline">
-                                        Status: selesai
+                                        <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
+                                        Status: masih berjalan
                                     </div>
                                     <div class="time">
-                                        <span><strong>0</strong> hari lagi</span>
+                                        <span><strong>32</strong> hari lagi</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="image">
-                                <img class="thumbnail" src="Assets/img-banjir-2.png">
+                                <img class="thumbnail" src="Assets/stream2.png">
                                 
                                 <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
                             </div>
