feat: detail page

--- a/detail-cj.html
+++ b/detail-cj.html
@@ -103,20 +103,20 @@
                 <div class="content-wrapper">
                     <div class="content-detail">
                         <div class="paragraph">
-                            <h2>Korban Banjir Kota Cirebon</h2>
-                            <h6>Yayasan SayaBisa</h6>
+                            <h2>PETUALANGAN CJ & SAIPUL</h2>
+                            <h6>Windah Basudara</h6>
                             <p>
-                                Kawan-kawan dan sahabat semua, kota Cirebon pada tanggal 23 Maret 2021 tepatnya dari pukul 5 pagi hujan sangat deras yang baru reda pada pukul 12 siang. Hujan yang sangat deras tersebut menyebabkan kota Ciberon dilanda kebanjiran yang cukup tinggi. Oleh karena itu, kami membuka donasi untuk membantu saudara-saudara kita disana. Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan. 
+                                Streaming ini dilakukan untuk menghibur pendonasi, dan yang paling utama adalah untuk mengumpulkan donasi bagi mereka yang kelaparan.
                             </p>
                         </div>
 
                         <div class="galery">
                             <div class="image">
-                                <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                <img class="thumbnail" src="Assets/stream1.png">
                             </div>
                             <br>
                             <div class="mini-galery">
-                                <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                <img class="thumbnail" src="Assets/stream1.png">
                             </div>
                         </div>
                     </div>
@@ -124,8 +124,8 @@
                     <div class="status">
                         <div class="status-progress">
                             <div class="charity-target">
-                                <h3>Rp450.000.000</h3>
-                                <p>Target : Rp 600.000.000</p>
+                                <h3>Rp68.000.000</h3>
+                                <p>Target : Rp 210.000.000</p>
                             </div>
                             <progress id="file" value="70" max="100"></progress>
                         </div>
@@ -135,7 +135,7 @@
                                 Status: masih berjalan
                             </div>
                             <div class="time">
-                                <span><strong>12</strong> hari lagi</span>
+                                <span><strong>11</strong> hari lagi</span>
                             </div>
                         </div>
                     </div>
