--- a/detail-jakarta.html
+++ b/detail-jakarta.html
@@ -103,20 +103,22 @@
                 <div class="content-wrapper">
                     <div class="content-detail">
                         <div class="paragraph">
-                            <h2>Korban Banjir Kota Cirebon</h2>
+                            <h2>Korban Banjir Kota Jakarta</h2>
                             <h6>Yayasan SayaBisa</h6>
                             <p>
-                                Kawan-kawan dan sahabat semua, kota Cirebon pada tanggal 23 Maret 2021 tepatnya dari pukul 5 pagi hujan sangat deras yang baru reda pada pukul 12 siang. Hujan yang sangat deras tersebut menyebabkan kota Ciberon dilanda kebanjiran yang cukup tinggi. Oleh karena itu, kami membuka donasi untuk membantu saudara-saudara kita disana. Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan. 
+                                Kawan-kawan semua, kota Jakarta pada tanggal 23 April 2021 tepatnya dari pukul 5 pagi hujan deras yang baru reda pada pukul 1 siang. Hujan yang deras tersebut menyebabkan kota Ciberon dilanda kebanjiran yang cukup tinggi. Oleh karena itu, kami membuka donasi untuk membantu saudara kita disana. Donasi yang akan diberikan berupa paket sembako, kebutuhan ibu anak, kebutuhan harian dan kesehatan. 
                             </p>
                         </div>
 
                         <div class="galery">
                             <div class="image">
-                                <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                <img class="thumbnail" src="Assets/img-banjir-2.png">
                             </div>
                             <br>
                             <div class="mini-galery">
-                                <img class="thumbnail" src="Assets/img-banjir-1.png">
+                                <img class="thumbnail" src="Assets/img-banjir-2.png">
+                                <img class="thumbnail" src="Assets/banjir-jakarta-2.png">
+                                <img class="thumbnail" src="Assets/banjir-jakarta-3.png">
                             </div>
                         </div>
                     </div>
@@ -124,20 +126,25 @@
                     <div class="status">
                         <div class="status-progress">
                             <div class="charity-target">
-                                <h3>Rp450.000.000</h3>
-                                <p>Target : Rp 600.000.000</p>
+                                <h3>Rp1.450.000.000</h3>
+                                <p>Target : Rp 1.800.000.000</p>
                             </div>
-                            <progress id="file" value="70" max="100"></progress>
+                            <progress id="file" value="85" max="100"></progress>
                         </div>
                         <div class="status-status">
                             <div>
-                                <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
-                                Status: masih berjalan
+                                <img src="Assets/Ellipse 3.png" alt="status" class="d-inline">
+                                Status: selesai
                             </div>
                             <div class="time">
-                                <span><strong>12</strong> hari lagi</span>
+                                <span><strong>0</strong> hari lagi</span>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="bukti-pengiriman">
+                        <p>Donasi sudah kami terima dan akan dikirimkan kepada korban. Tekan tombol untuk melihat rincian pengiriman donasi.</p>
+                        <button>Bukti Pengiriman Donasi</button>
                     </div>
 
                     <div class="donation-list">
@@ -146,63 +153,63 @@
 
                         <div class="donation">
                             <p>Yadi</p>
-                            <p>Rp 5.000.000</p>
+                            <p>Rp 50.000.000</p>
                             <p>28 May 2021, 16.55 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Philip</p>
-                            <p>Rp 7.000.000</p>
+                            <p>Rp 70.000.000</p>
                             <p>28 May 2021, 16.59 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Fernando</p>
-                            <p>Rp 5.650.000</p>
+                            <p>Rp 50.650.000</p>
                             <p>28 May 2021, 17.50 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Suprijan</p>
-                            <p>Rp 500.000</p>
+                            <p>Rp 5.000.000</p>
                             <p>28 May 2021, 17.55 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Fikri</p>
-                            <p>Rp 10.000.000</p>
+                            <p>Rp 100.000.000</p>
                             <p>28 May 2021, 18.55 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Aughest</p>
-                            <p>Rp 5.200.000</p>
+                            <p>Rp 50.200.000</p>
                             <p>28 May 2021, 19.03 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Reinhart</p>
-                            <p>Rp 1.700.000</p>
+                            <p>Rp 10.700.000</p>
                             <p>28 May 2021, 19.23 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Richard</p>
-                            <p>Rp 900.000</p>
+                            <p>Rp 9.000.000</p>
                             <p>28 May 2021, 20.31 WIB</p>
                         </div>
                         <hr>
 
                         <div class="donation">
                             <p>Yohanes</p>
-                            <p>Rp 2.300.000</p>
+                            <p>Rp 20.300.000</p>
                             <p>28 May 2021, 20.45 WIB</p>
                         </div>
                     </div>
