fix: broken css

--- a/detail-catur.html
+++ b/detail-catur.html
@@ -140,6 +140,8 @@
                         </div>
                     </div>
 
+                    <button id="btn-donate" style="margin: 20px;">Donasi Sekarang!</button>
+
                     <div class="donation-list">
                         <h3>Donatur</h3>
                         <div class="blue-separator-line"></div>
