feat: profile page

--- a/profile-donatur.html
+++ b/profile-donatur.html
@@ -131,11 +131,58 @@
                 </div>
             </div>
 
-            <div class="content">
+            <div class="content" style="background-color: white;">
                 <div style="height: 3000px !important; color: black;">
-                    <p>
-                        https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js
-                    </p>
+                    <h1 style="font-weight: bolder;">Profile</h1>
+                    <div class="profile-container">
+                        <div class="profile-card">
+                            <img id="avatar" src="Assets/img-person.png" style="width: 160px !important; height: 160px !important;">
+                            <p style="font-size: 18px;color: #6B6B6B;">Tanggal Bergabung: 27 Mei 2021</p>
+
+                            <br>
+
+                            <h2 style="font-weight: bolder;">Progress Level Anda</h2>
+                            <p style="text-align: center;margin-bottom: 0 !important; color: #707070;">500 exp to go</p>
+                            <div style="display: flex;padding: 0px 20px 20px 20px;">
+                                <div class="home-menu-transparant-progress-active">
+                                    3
+                                </div>
+                                <progress id="file" value="60" max="100"></progress>
+                                <div class="home-menu-transparant-progress">
+                                    4
+                                </div>
+                            </div>
+                            <br><br>
+                            <div class="balance-section">
+                                <h2 style="color: #6b6b6b; text-align: left;">Saldo</h2>
+
+                                <div class="balance-cell">
+                                    <h3 style="color: white; font-weight: bolder;margin-bottom: 0px !important;">Rp 5.300.000</h3>
+                                </div>
+                                <br>
+                                <button id="btn-deposit">Deposit Saldo</button>
+                            </div>
+                        </div>
+
+                        <div class="profile-info">
+                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nama Depan</label>
+                            <p>Robert</p>
+                            <hr><br>
+
+                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nama Belakang</label>
+                            <p>Mulawarman</p>
+                            <hr><br>
+
+                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Email</label>
+                            <p>robert.mwm@sunib.ac.id</p>
+                            <hr><br>
+
+                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nomor Telepon</label>
+                            <p>0812-3456-7238</p>
+                            <hr><br>
+                            <button id="btn-edit-profile">Ubah Profile</button>
+                        </div>
+                    </div>
                 </div>
             </div>
 
